# horth

./: README.md  horth-lang.cabal  horth.cabal  main.hs  package.yaml
app/: Main.hs
examples/: add  add.horth  add.s  div  div.horth  div.s  mul  mul.horth  mul.s  rem  rem.horth  rem.s  sub  sub.horth  sub.s
src/: Lib.hs
